examples/scanner/literals/fail/invalid_unicode_emoji.axo
const bad = "\u{110000}"
print(bad)
